--- a/src/component/Navbar/Navbar.scss
+++ b/src/component/Navbar/Navbar.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,700");
+
 // @import "../../global-style/global.scss";
 $primary-color: #ffffff;
 * {
@@ -61,6 +62,7 @@ $primary-color: #ffffff;
 
 .Header__menu li:hover {
   font-weight: bold;
+  text-decoration: underline;
 }
 
 .underline-red {
@@ -95,4 +97,48 @@ img {
   align-items: center;
   padding-right: 20px;
   height: inherit;
+}
+
+.Header__search > ul {
+  display: flex;
+  align-content: center;
+  list-style: none;
+  height: inherit;
+}
+
+.Header__search > li {
+  min-width: 25%;
+  height: 67px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.Header__search > li:hover {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.Header__search h4 {
+  margin: 0;
+  padding: 0;
+  color: white;
+}
+
+.Header__search--button {
+  border: 0;
+  margin: 0;
+  padding-left: 5px;
+  width: 100px;
+  height: 100%;
+  color: white;
+  font-size: large;
+  font-family: "Lato";
+  text-align: center;
+  font-weight: bold;
+  background-color: inherit;
+}
+
+.Header__search--button:hover {
+  font-weight: bold;
+  text-decoration: underline;
 }
