--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -4,3 +4,26 @@
   align-items: center;
   flex-wrap: wrap;
 }
+
+.Home__button {
+  width: 110px;
+  height: 40px;
+  display: flex;
+  position: absolute;
+  top: 12%;
+  left: 80%;
+  border: 0px;
+  border-radius: 5px;
+  margin: 0px;
+  padding-left: 10px;
+  padding-bottom: 2px;
+  background-color: #022c43;
+  color: white;
+  font-weight: bold;
+}
+
+// .Home__button:hover {
+//   background-color: white;
+//   color: #022c43;
+//   border: 3px solid #022c43;
+// }
