--- a/src/component/LoginForm/LoginForm.scss
+++ b/src/component/LoginForm/LoginForm.scss
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,700");
-
 /*https://colorhunt.co/palette/135960*/
 
 .Login__form {
@@ -9,7 +8,7 @@
   border-radius: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
-  height: 80vh;
+  height: 450px;
   background-color: rgba(255, 255, 255, 0.1);
 }
 .Login__title {
