--- a/src/component/RegisterForm/RegisterForm.scss
+++ b/src/component/RegisterForm/RegisterForm.scss
@@ -2,24 +2,24 @@
 
 /*https://colorhunt.co/palette/135960*/
 
-.Login__form {
+.Register__form {
   min-width: 350px;
   margin: 5px;
   border: 2px solid white;
   border-radius: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
-  height: 80vh;
+  height: 550px;
   background-color: rgba(255, 255, 255, 0.1);
 }
-.Login__title {
+.Register__title {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: transparent;
 }
-.Login__form--title {
+.Register__form--title {
   font-family: "Lato", "Helvetica Neue", sans-serif;
   color: white;
   font-size: 20px;
@@ -28,16 +28,16 @@
   padding-bottom: 20px;
   background-color: transparent;
 }
-.Login__form--img {
+.Register__form--img {
   width: 48px;
   height: 48px;
   background-color: transparent;
 }
-.Login__form--form {
+.Register__form--form {
   background-color: transparent;
 }
 
-.Login__item {
+.Register__item {
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -46,7 +46,7 @@
   padding: 20px 10px 15px 10px;
   background-color: transparent;
 }
-.Login__item--input {
+.Register__item--input {
   width: 90%;
   height: 40px;
   border-bottom: 1px solid white;
@@ -60,7 +60,7 @@
   color: white;
 }
 
-.Login__button {
+.Register__button {
   width: 85%;
   height: 40px;
   border: 1px solid white;
@@ -68,7 +68,7 @@
   color: white;
   background-color: transparent;
 }
-.Login__action {
+.Register__action {
   width: 100%;
   margin: 0;
   padding-top: 30px;
@@ -79,23 +79,23 @@
   color: white;
   background-color: transparent;
 }
-.Login__action > a {
+.Register__action > a {
   color: white;
 }
-.Login__action > a:hover {
+.Register__action > a:hover {
   text-decoration: underline;
 }
-.Login__link {
+.Register__link {
   display: flex;
   background-color: transparent;
 }
-.Login__link > a {
+.Register__link > a {
   color: white;
 }
-.Login__link > a:hover {
+.Register__link > a:hover {
   text-decoration: underline;
 }
-.Login__link > a {
+.Register__link > a {
   font-weight: bold;
   padding-left: 5px;
 }
