--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700");
+
 .Chart__container {
   display: flex;
   justify-content: center;
@@ -10,8 +12,8 @@
   height: 40px;
   display: flex;
   position: absolute;
-  top: 12%;
-  left: 80%;
+  top: 80px;
+  right: 100px;
   border: 0px;
   border-radius: 5px;
   margin: 0px;
@@ -22,8 +24,20 @@
   font-weight: bold;
 }
 
-// .Home__button:hover {
-//   background-color: white;
-//   color: #022c43;
-//   border: 3px solid #022c43;
-// }
+.Home__button:hover {
+  background-color: white;
+  color: #022c43;
+  border: 3px solid #022c43;
+}
+.Home__message {
+  background-image: linear-gradient(
+    243deg,
+    rgba(255, 253, 221, 1) 13.4%,
+    rgba(248, 215, 215, 1) 82.1%
+  );
+  font-family: "Lato", "Helvetica Neue", sans-serif;
+  font-weight: bold;
+  color: brown;
+  font-size: medium;
+  padding-left: 70px;
+}
